# wit4java

./: CHANGELOG.md  README.md  extractAssumptions.py  getJavaFiles.py  output.py  processors.py  readme  requirements.txt  setup.cfg  setup.py  test.txt  wit4java-wrapper.py  wit4java.py
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  documentation-issue.md  feature_request.md
.github/workflows/: python-app.yml  python-unit-tests.yml
output/: builders.py
output/resources/: Test.java
tests/unit/: test_processors.py  test_testharness.py
tests/unit/resources/verifiers/: VerifierWithBooleanAssumptions.java  VerifierWithCharAssumptions.java  VerifierWithFloatingPointAssumptions.java  VerifierWithIntegerAssumptions.java  VerifierWithStringAssumptions.java
version 1.0/: readme  readme.md  wit4java.py
version 2.0/: readme.md  wit4java.py
wit4java/: __init__.py  processors.py  testharness.py  wit4java.py
wit4java/output/: builders.py
wit4java/output/resources/: Test.java  Verifier.java
wit4java/resources/: Test.java  Verifier.java
