[metadata]
name = wit4java
version = attr: wit4java.__version__
author = Joss Moffatt
description = An execution-based violation-witness validator for Java.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wit4java/wit4java
project_urls =
  Issue Tracker = https://github.com/wit4java/wit4java


[options]
packages=find:
include_package_data = True

[options.package_data]
* = *.java

[options.entry_points]
console_scripts =
  wit4java = wit4java.wit4java:main

[options.packages.find]
exclude =
    tests*

